--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -55,22 +55,23 @@ services:
       - "8089:443"
     depends_on:
       - backend
+      - grafana
     networks:
       - app-network
     env_file:
       - .env
 
-  adminer:
-    container_name: adminer
-    image: adminer
-    restart: always
-    networks:
-      - app-network
-    ports:
-      - "8080:8080"
-      - "9876:8080"
-    depends_on:
-      - db
+  # adminer:
+  #   container_name: adminer
+  #   image: adminer
+  #   restart: always
+  #   networks:
+  #     - app-network
+  #   ports:
+  #     - "8080:8080"
+  #     - "9876:8080"
+  #   depends_on:
+  #     - db
 
   node-exporter:
     image: prom/node-exporter
@@ -123,8 +124,12 @@ services:
     #   - ./grafana/dashboards:/var/lib/grafana/dashboards
     #   - ./grafana/provisioning:/etc/grafana/provisioning
     environment:
-    - GF_SECURITY_ADMIN_USER=admin
-    - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_SERVER_ROOT_URL=https://localhost:8089/grafana/
+      - GF_SERVER_SERVE_FROM_SUB_PATH=true
+      # - GF_SERVER_DOMAIN=localhost
+      # - GF_SERVER_PROTOCOL=https
     networks:
       - app-network
   
