--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -106,6 +106,7 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-Forwarded-Host $host;
             proxy_set_header X-Forwarded-Port $server_port;
@@ -130,18 +131,17 @@ http {
                 return 204;
             }
 
-            # rewrite ^/grafana(/.*)$ $1 break;
-            proxy_pass http://grafana:3000/;
-            proxy_ssl_verify off;  
+            rewrite ^/grafana/(.*) /$1 break;
+            proxy_pass http://grafana:3000;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Proto https;
+            proxy_set_header X-Forwarded-Ssl on;
             proxy_set_header X-Forwarded-Host $host;
             proxy_set_header X-Forwarded-Port $server_port;
             proxy_set_header X-Forwarded-Prefix /grafana;
-
             
             # Debug headers
             add_header X-Debug-Backend-URL $upstream_addr;
